--- a/styles/components/input.module.scss
+++ b/styles/components/input.module.scss
@@ -13,6 +13,6 @@
             background: none;
             padding: 0.5rem;
             color: #DFBBB1;
-            border-radius: none;
+            border-radius: 0;
       }
 }
