--- a/styles/components/stat.module.scss
+++ b/styles/components/stat.module.scss
@@ -1,8 +1,39 @@
 .stat {
-      width: 100%;
+      width: 1fr;
       height: 100%;
       min-height: 150px;
-      background: white;
-      border: 2px solid white;
-      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25)
+      background: #373F51;
+      border: 4px solid white;
+      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
+
+      display: grid;
+      grid-template-rows: 1fr auto;
+      align-items: center;
+
+
+      &:hover {
+            box-shadow: 0 0 10px 4px rgba(223, 187, 177, 0.25);
+            h2, h3 {
+                  color: #E43F6F
+            }
+      }
+
+      h2 {
+            color: #DFBBB1;
+            max-width: 100%;
+            text-align: center;
+            font-size: 24px;
+            text-transform: capitalize;
+            display: inline-block;
+            overflow-wrap: break-word;
+            word-break: break-word;
+            padding: 0.5rem;
+      }
+
+      h3 {
+            background: white;
+            padding: 1rem;
+            text-align: center;
+            color: #373F51;
+      }
 }
