--- a/styles/layouts/dashboard.module.scss
+++ b/styles/layouts/dashboard.module.scss
@@ -3,18 +3,37 @@
       grid-gap: 1.5rem;
       min-height: 100vh;
       background: #CCE3DE;
+      h1, h4 {
+            text-align: center;
+      }
+      h4 {
+            font-size: 12px;
+            color: grey;
+      }
 }
 
 @media screen and (min-width: 700px) {
       .dashboard {
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr) repeat(2, 1.5fr)
+            grid-template-rows: auto auto repeat(2, 1fr) repeat(2, 1.5fr);
+            h1, h4 {
+                  grid-column: 1/3;
+            }
+            h4 {
+                  grid-row: 2/3;
+            }
       }
 }
 
 @media screen and (min-width: 1200px) {
       .dashboard {
             grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: 1fr 1.5fr
+            grid-template-rows: auto auto 1fr 1.5fr;
+            h1, h4 {
+                  grid-column: 1/5;
+            }
+            h4 {
+                  grid-row: 2/3;
+            }
       }
 } 
