--- a/styles/components/map.module.scss
+++ b/styles/components/map.module.scss
@@ -2,9 +2,14 @@
       width: 100%;
       height: 100%;
       min-height: 200px;
+      max-height: 400px;
       background: white;
-      border: 2px solid white;
-      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25)
+      border: 4px solid white;
+      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
+      .leaflet-container {
+            width: 100px;
+            height: 100px;
+      }
 }
 
 @media screen and (min-width: 700px) {
