--- a/styles/components/chart.module.scss
+++ b/styles/components/chart.module.scss
@@ -1,14 +1,22 @@
 .chart {
-      width: 100%;
-      height: 100%;
-      min-height: 200px;
+      width: 90vw;
+      height: auto;
       background: white;
       border: 2px solid white;
-      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25)
+      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      h1 {
+            text-align: center;
+            font-size: 32px;
+      }
 }
 
 @media screen and (min-width: 700px) {
       .chart {
+            width: auto;
+            min-height: 200px;
             grid-row: 6/7;
             grid-column: 1/3;
       }
