--- a/styles/layouts/dashboard.module.scss
+++ b/styles/layouts/dashboard.module.scss
@@ -1,8 +1,10 @@
 .dashboard {
       display: grid;
+      max-width: 100vw;
       grid-gap: 1.5rem;
       min-height: 100vh;
       background: #CCE3DE;
+      grid-template-rows: auto auto repeat(4, 1fr) repeat(2, 1.5fr);
       h1, h4 {
             text-align: center;
       }
